--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
@@ -31,8 +31,6 @@
     "node_modules/**/*",
     "dist/**/*",
     "**/__tests__/**",
-  ],
-  "paths":{
-    "specification.shared/src/*": ["./src/*"]
-  }
+    "jest.config.ts"
+  ]
 }
