--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "url": "https://github.com/modbus2mqtt/specification.shared"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepack": "../server.shared/changeModbusDependencies.sh package.json",
+    "postpack": "rm package.json && mv package.json.bck package.json"
   },
   "devDependencies": {
-    "ts-jest": "^29.1.3",
+    "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
+    "tslib": "^2.6.3",
     "typescript": "^5.4.5"
   }
 }
