--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,11 +1,11 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "module":  "commonjs",
+        "module": "commonjs",
         "moduleResolution": "node",
         "outDir": "./cjs",
         "skipLibCheck": true,
-        "declaration": false,
-         "importHelpers": true,
-     }
-   }
+        "declaration": true,
+        "importHelpers": true,
+    }
+}
