--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,10 +47,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "22.x"
-          registry-url: "https://npm.pkg.github.com"
           scope: "@modbus2mqtt"
-      - run: npm run addscope
-      - name: Publish to GitHub Packages
+      - name: Publish to NPM Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
