--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/modbus2mqtt/specification.shared.git"
+    "url": "git+https://github.com/modbus2mqtt/specification.shared.git"
   },
   "exports": {
     "require": "./cjs/index.js",
@@ -25,7 +25,7 @@
     "test": "echo 'no Tests'",
     "build.cjs": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > cjs/package.json",
     "build.esm": "tsc  --build tsconfig.json && echo '{\"type\": \"module\"}' > esm/package.json",
-    "build": "npm run build.cjs && npm run build.esm"
+    "build": "npm run build.cjs  && npm run build.esm"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
