--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Clear npm cache
+        run: npm cache clean --force
       - name: Install modules
         run: npm ci
       - name: Build
