--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ on:
     branches:
       - main
       - master
+  workflow_dispatch:
   pull_request:
     paths-ignore:
       - "docs/**"
@@ -22,7 +23,7 @@ on:
   workflow_call:
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         os:
