--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,19 +24,12 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - windows-latest
-        node: [20.x, 22.x]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 20.x
       - name: Install modules
         run: yarn
       - name: Run tests
