--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           node-version: 20.x
       - name: Install modules
-        run: yarn
+        run: npm ci .
       - name: Run tests
-        run: yarn test
+        run: npm test
