--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,18 @@ jobs:
       - name: Build
         run: npm run build
       - name: Test
-        run: npm run test        
+        run: npm run test
+      - name: "Check cypress e2e specification existance"
+        id: check_localdev
+        uses: andstor/file-existence-action@v2
+        with:
+          files: "./cypress/e2e/*.*"
+      - name: Install local services for e2e Tests
+        if: steps.check_localdev.outputs.files_exists == 'true'
+        run: ./e2e/localdev.sh
+      - name: Cypress run
+        if: steps.check_localdev.outputs.files_exists == 'true'
+        uses: cypress-io/github-action@v6
       - name: Create Release
         id: create_release
         uses: ncipollo/release-action@v1
