--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,7 @@ jobs:
           node-version: 20.x
       - name: Install modules
         run: npm ci .
+      - name: list modules
+        run: ls node_modules/@modbus2mqtt
       - name: Run tests
         run: npm test
