--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Install modules
         run: npm ci .
       - name: list modules
-        run: ls node_modules/@modbus2mqtt/*
+        run: cat package.json
       - name: Run tests
         run: npm test
