--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build.cjs": "tsc --build tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > cjs/package.json",
     "build.esm": "tsc  --build tsconfig.json && echo '{\"type\": \"module\"}' > esm/package.json",
     "build": "npm run build.cjs  && npm run build.esm",
+    "prepare": "npm run build",
     "prettier": "prettier --write '**/*.{ts,js,css,html,tsx}'"
   },
   "devDependencies": {
