--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -17,8 +17,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           output: CHANGELOG.md
-      - name: Checkin CHANGES.md
+      - name: Checkin CHANGELOG.md
         uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Update CHANGELOG.md
 
       
           
