--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           output: CHANGELOG.md
+          headerLabel: Changelog for ${{github.event.push.base.repo.name}}
       - name: Checkin CHANGELOG.md
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
