--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,8 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
-
+cjs 
+esm
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
